# elastimem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: bench_recall.py
docs/: api.md  api_stability.md  architecture.md  governor.md  installation.md  integration.md  integrations.md  quickstart.md  schema.md
examples/: llama_cpp_bot.py  memory_search.py  minimal_bot.py  openai_agent.py
src/elastimem/: __init__.py  assembly.py  config.py  db.py  default_embedder.py  embeddings.py  episodic.py  extraction.py  governor.py  guards.py  procedural.py  retrieval.py  rules.py  semantic.py  store.py  worker.py
src/engram/: __init__.py  assembly.py  config.py  db.py  embeddings.py  episodic.py  extraction.py  governor.py  guards.py  procedural.py  retrieval.py  rules.py  semantic.py  store.py  worker.py
tests/: conftest.py  test_assembly.py  test_default_embedder.py  test_degradation.py  test_episodic.py  test_governor.py  test_retrieval.py  test_rules.py  test_semantic.py  test_store_api.py  test_worker.py
