[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elastimem"
version = "0.1.0"
description = "Elastic, resource-adaptive memory framework for local-first AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Kumarswami Kallimath" }]
keywords = ["ai", "agents", "memory", "local-first", "llm", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
# Zero required dependencies. The stdlib is the whole story.
dependencies = []

[project.optional-dependencies]
system = ["psutil>=5.9"]      # richer hardware probing for the Memory Governor
vec = ["sqlite-vec>=0.1"]     # accelerated vector search (brute-force cosine otherwise)

[project.urls]
Homepage = "https://github.com/CodebyKumar/elastimem"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/elastimem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
