[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elastimem"
version = "0.1.0a1"
description = "Elastic, resource-adaptive memory framework for local-first AI agents"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Kumarswami K" }]
keywords = ["ai", "agents", "memory", "local-first", "llm", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]
# Zero required dependencies. The stdlib is the whole story.
dependencies = []

[project.optional-dependencies]
system = ["psutil>=5.9"]      # richer hardware probing for the Memory Governor
# Reserved for a future sqlite-vec-backed vector index; NOT wired into
# src/elastimem yet — installing this extra currently has no effect.
# Brute-force cosine (embeddings.py) is used unconditionally today.
vec = ["sqlite-vec>=0.1"]
# Elastimem's built-in default embedder (see default_embedder.py) — activates
# automatically when a host doesn't supply its own embedder=/embed_fn=, so
# semantic recall works with zero setup. ONNX Runtime, no torch. Purely
# optional: without it, Elastimem falls back to FTS5/keyword retrieval, same
# as before this extra existed.
embed = ["fastembed>=0.4"]

[project.urls]
Homepage = "https://github.com/CodebyKumar/elastimem"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/elastimem"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: downloads/loads a real model (the built-in embedder) — excluded by default, run explicitly with -m slow",
]
addopts = "-m 'not slow'"
